Add single Courses initial structure

--- a/index.html
+++ b/index.html
@@ -131,20 +131,20 @@
         <section class="box list-courses">
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
-                    <a href="#">
+                    <a href="single-courses.html" title="Curso de Bootstrap">
                         <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
                     </a>
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none">
+                    <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                         <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
                     </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
                     <figure class="sin-margin">
-                        <a href="#" class="decoration-none">
+                        <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                             <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
                             <figcaption>Yan Vallejo</figcaption>
                         </a>
@@ -157,20 +157,20 @@
             </article>
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
-                    <a href="#">
+                    <a href="single-courses.html" title="Curso de Bootstrap">
                         <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
                     </a>
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none">
+                    <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                         <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
                     </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
                     <figure class="sin-margin">
-                        <a href="#" class="decoration-none">
+                        <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                             <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
                             <figcaption>Yan Vallejo</figcaption>
                         </a>
@@ -183,20 +183,20 @@
             </article>
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
-                    <a href="#">
+                    <a href="single-courses.html" title="Curso de Bootstrap">
                         <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
                     </a>
                     <figcaption class="price price--premiun">Premium - $ 10</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none">
+                    <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                         <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
                     </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
                     <figure class="sin-margin">
-                        <a href="#" class="decoration-none">
+                        <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                             <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
                             <figcaption>Yan Vallejo</figcaption>
                         </a>
@@ -209,20 +209,20 @@
             </article>
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
-                    <a href="#">
+                    <a href="single-courses.html" title="Curso de Bootstrap">
                         <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
                     </a>
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none">
+                    <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                         <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
                     </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
                     <figure class="sin-margin">
-                        <a href="#" class="decoration-none">
+                        <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                             <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
                             <figcaption>Yan Vallejo</figcaption>
                         </a>
@@ -235,20 +235,20 @@
             </article>
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
-                    <a href="#">
+                    <a href="single-courses.html" title="Curso de Bootstrap">
                         <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
                     </a>
                     <figcaption class="price price--free">Gratis</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none">
+                    <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                         <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
                     </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
                     <figure class="sin-margin">
-                        <a href="#" class="decoration-none">
+                        <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                             <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
                             <figcaption>Yan Vallejo</figcaption>
                         </a>
@@ -261,20 +261,20 @@
             </article>
             <article class="list-courses__item">
                 <figure class="list-courses__image sin-margin">
-                    <a href="#">
+                    <a href="single-courses.html" title="Curso de Bootstrap">
                         <img class="img-responsive" src="img/item-courses.jpg" alt="Bootstrap 3" width="640" height="420">
                     </a>
                     <figcaption class="price price--premiun">Premium - $ 10</figcaption>
                 </figure>
                 <div class="list-courses__information">
-                    <a href="#" class="decoration-none">
+                    <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                         <h3 class="sin-margin">Bootstrap, Lo mejor del mundo Parte 1</h3>
                     </a>
                     <p>Conoce el maravilloso framework que ha revolucionado la manera de trabajar para web</p>
                 </div>
                 <footer class="list-courses__author">
                     <figure class="sin-margin">
-                        <a href="#" class="decoration-none">
+                        <a href="single-courses.html" class="decoration-none" title="Curso de Bootstrap">
                             <img class="img-responsive" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo" width="100" height="100">
                             <figcaption>Yan Vallejo</figcaption>
                         </a>
@@ -286,7 +286,7 @@
                 </footer>
             </article>
         </section> <!-- End List Courses -->
-            <a href="#" class="button button--main mb-5">Ver todos los cursos</a>
+            <a href="cursos.html" class="button button--main mb-5" title="Ver todos los cursos">Ver todos los cursos</a>
         <section class="register">
             <div class="box box--center">
                 <article class="register__testimonial">
