Single Course finished

--- a/single-courses.html
+++ b/single-courses.html
@@ -89,17 +89,104 @@
                 </ul>
             </div>
         </aside>
-        <section class="box courseInformation">
-            <article>
-                <header>
+        <section class="box courseInformation ">
+            <article class="courseInformation__content">
+                <header class="mt-1">
                     <figure class="sin-margin">
                         <img src="img/startup.jpg" alt="Bootstap, Lo mejor del mundo Parte 1">
                     </figure>
                 </header>
+                <h2 class="title--secundary">Descripción del curso</h2>
+                <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
+                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no
+                sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy
+                eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores
+                et ea rebum.</p>
+
+                <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur
+                sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+                eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor
+                sit amet.</p>
+
+                <p>vel illum dolore eu feugiat nulla facilisis at vero eros et accumsan et iusto odio dignissim qui blandit praesent luptatum
+                zzril delenit augue duis dolore te feugait nulla facilisi.</p>
+                <div class="courseSyllabus">
+                    <h2 class="title--secundary">Listado de Temas</h2>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 1 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 2 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 1 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 3 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 4 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 5 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                    <div class="courseSyllabus__item">
+                        <h4 class="courseSyllabus__title">Sesión 6 - Bootstrap Cambiara tu vida</h4>
+                        <ol>
+                            <li>Video Numero 1, información Introductoria</li>
+                            <li>Video Numero 2, información Introductoria</li>
+                        </ol>
+                    </div>
+                </div>
+                <a href="#" class="button button--main ml-0 mt-2">Suscribirse</a>
             </article>
-            <aside>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi amet sint distinctio perferendis possimus modi reiciendis voluptatem tempora cumque vero ratione tenetur nobis, quos optio odit facere voluptate, harum magnam.
+            <!-- End Content information course main -->
+            <aside class="courseInformation__teacher text-center">
+                <figure class="courseInformation__teacher--image">
+                    <img class="rounded-circle" src="img/yan-arlex-vallejo.jpg" alt="Yan Arlex Vallejo">
+                    <figcaption>Yan Arlex Vallejo</figcaption>
+                </figure>
+                <div class="courseInformation__teacher--price mt-2">
+                    <strong class="courseInformation__teacher--titleSecundary">Precio</strong>
+                    <span class="courseInformation__teacher--value ap-price">$35.000</span>
+                </div>
+                 <div class="courseInformation__teacher--otherInformation mt-2">
+                    <strong class="courseInformation__teacher--titleSecundary">Duración</strong>
+                    <span class="courseInformation__teacher--value">130 horas</span>
+                 </div>
+                <div class="courseInformation__teacher--otherInformation mt-2">
+                    <strong class="courseInformation__teacher--titleSecundary">Contenido</strong>
+                    <span class="courseInformation__teacher--value">10 videos</span>
+                </div>
+                <div class="courseInformation__teacher--button mt-2">
+                    <a href="#" class="button button--main">Suscribirse</a>
+                </div>
             </aside>
+            <!-- End Content teacher,price, duration -->
         </section>
         <!-- Start Relationship Courses -->
         <section class="list-courses pb-5 featured-courses">
@@ -185,9 +272,6 @@
                 </article>
             </div>
         </section> <!-- End Relationship Courses -->
-
-
-
     </main> <!-- End Main -->
     <footer class="footer box">
         <figure class="sin-margin">
